--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bh-dev",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "homepage": "https://bukreiev.github.io/bh-dev/",
   "type": "module",
   "scripts": {
     "dev": "vite",
