--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "formik": "^2.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
